--- a/src/metrics.ipynb
+++ b/src/metrics.ipynb
@@ -58,6 +58,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Recontruction from gaussian measurements"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -102,6 +109,13 @@
     "\n",
     "# Saving\n",
     "utils.save_plot(is_save, save_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reconstruction : All models"
    ]
   },
   {
@@ -155,6 +169,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sensing images from the range of the generator"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -202,6 +223,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Noise tolerance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -213,7 +241,6 @@
     "criterion = ['l2', 'mean']\n",
     "retrieve_list = [['l2', 'mean'], ['l2', 'std']]\n",
     "legend_base_regexs = [\n",
-    "    #     ('Lasso, m=100' , '../estimated/mnist/full-input/gaussian/', '/100/lasso/0.1'),\n",
     "    ('Lasso, m=500' , '../estimated/mnist/full-input/gaussian/', '/500/lasso/0.1'),\n",
     "    ('VAE, m=100'   , '../estimated/mnist/full-input/gaussian/', '/100/vae/0.0_1.0_0.1_adam_0.01_0.9_False_1000_2'),\n",
     "    ('VAE, m=500'   , '../estimated/mnist/full-input/gaussian/', '/500/vae/0.0_1.0_0.1_adam_0.01_0.9_False_1000_2'),\n",
@@ -244,6 +271,13 @@
     "\n",
     "# Saving\n",
     "utils.save_plot(is_save, save_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare hyperparamter settings"
    ]
   },
   {
@@ -297,6 +331,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Recontruction from gaussian measurements"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -308,10 +349,10 @@
     "criterion = ['l2', 'mean']\n",
     "retrieve_list = [['l2', 'mean'], ['l2', 'std']]\n",
     "legend_base_regexs = [\n",
-    "    ('Lasso (DCT)'          , '../estimated/celebA/full-input/gaussian/0.01/', '/lasso-dct/*'),\n",
-    "    ('Lasso (Wavelet)'      , '../estimated/celebA/full-input/gaussian/0.01/', '/lasso-wavelet/1e-05'),\n",
-    "    ('DCGAN'                , '../estimated/celebA/full-input/gaussian/0.01/', '/dcgan/0.0_1.0_0.0_0.0_0.0_adam_0.1_0.9_False_500_2'),\n",
-    "    ('DCGAN+Reg, 500 iter'  , '../estimated/celebA/full-input/gaussian/0.01/', '/dcgan/0.0_1.0_0.001_0.0_0.0_adam_0.1_0.9_False_500_10'),\n",
+    "    ('Lasso (DCT)'     , '../estimated/celebA/full-input/gaussian/0.01/', '/lasso-dct/*'),\n",
+    "    ('Lasso (Wavelet)' , '../estimated/celebA/full-input/gaussian/0.01/', '/lasso-wavelet/1e-05'),\n",
+    "    ('DCGAN'           , '../estimated/celebA/full-input/gaussian/0.01/', '/dcgan/0.0_1.0_0.0_0.0_0.0_adam_0.1_0.9_False_500_2'),\n",
+    "    ('DCGAN+Reg'       , '../estimated/celebA/full-input/gaussian/0.01/', '/dcgan/0.0_1.0_0.001_0.0_0.0_adam_0.1_0.9_False_500_10'),\n",
     "]\n",
     "save_path = '../results/celebA_reconstr_l2.pdf'\n",
     "\n",
@@ -345,6 +386,13 @@
     "\n",
     "# Saving\n",
     "utils.save_plot(is_save, save_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sensing images from the span of the generator"
    ]
   },
   {
@@ -395,6 +443,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Noise tolerance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -435,6 +490,13 @@
     "\n",
     "# Saving\n",
     "utils.save_plot(is_save, save_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare hyperparameter settings"
    ]
   },
   {
