k-sparse-wavelet metrics

--- a/src/metrics.ipynb
+++ b/src/metrics.ipynb
@@ -30,9 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "matplotlib.rcParams.update({'font.size': 15})"
@@ -67,9 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Define what to plot\n",
@@ -121,9 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Define what to plot\n",
@@ -178,9 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Define what to plot\n",
@@ -232,9 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Define what to plot\n",
@@ -283,9 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Define what to plot\n",
@@ -340,9 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Define what to plot\n",
@@ -398,9 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Define what to plot\n",
@@ -452,9 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Define what to plot\n",
@@ -496,15 +478,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## k-sparse-wavelet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Define what to plot\n",
+    "criterion = ['l2', 'mean']\n",
+    "retrieve_list = [['l2', 'mean'], ['l2', 'std']]\n",
+    "legend_base_regexs = [\n",
+    "    ('k-sparse-wavelet, m=12288' , '../estimated/celebA/full-input/project/0.0/12288/k-sparse-wavelet/', '')\n",
+    "]\n",
+    "# save_path = '../results/celebA_noise_l2.pdf'\n",
+    "\n",
+    "## Plot\n",
+    "plt.figure(figsize=[12, 8])\n",
+    "legends = []\n",
+    "for legend, base, regex in legend_base_regexs:\n",
+    "    metrics_utils.plot(base, regex, criterion, retrieve_list)\n",
+    "    legends.append(legend) \n",
+    "    \n",
+    "\n",
+    "## Prettify\n",
+    "\n",
+    "# axis\n",
+    "plt.gca().set_ylim(bottom=0)\n",
+    "plt.gca().set_xscale(\"log\", nonposx='clip')\n",
+    "plt.gca().set_xlim([40, 13000])\n",
+    "\n",
+    "# labels, ticks, titles\n",
+    "ticks = [50, 100, 200, 500, 1000, 2500, 5000, 7500, 10000, 12288]\n",
+    "labels = [50, 100, 200, 500, 1000, 2500, 5000, 7500, 10000, 12288]\n",
+    "plt.xticks(ticks, labels, rotation=90)\n",
+    "plt.xticks(ticks, labels)\n",
+    "plt.ylabel('Reconstruction error (per pixel)')\n",
+    "plt.xlabel('k')\n",
+    "\n",
+    "# Legend\n",
+    "plt.legend(legends, fontsize=12.5, loc=1)\n",
+    "\n",
+    "# # Saving\n",
+    "# utils.save_plot(is_save, save_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Compare hyperparameter settings"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Define what to plot\n",
@@ -564,5 +595,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
